# ai-genppt

./: .env.example  .gitignore  README.md  pyproject.toml  test_run.py
genppt/: __init__.py  cli.py  config.py
genppt/agent/: graph.py  nodes.py  state.py
genppt/icons/: cache.py  resolver.py
genppt/icons/sets/: __init__.py  bootstrap.py  feather.py  heroicons.py  simple_icons.py  tabler.py
genppt/images/: cache.py  fetcher.py
genppt/images/sources/: __init__.py  openverse.py  picsum.py  wikimedia.py
genppt/llm/: client.py  schemas.py
genppt/renderer/: builder.py  layouts.py
genppt/renderer/themes/: __init__.py  base.py  corporate.py  dark.py  minimalist.py
genppt/utils/: logger.py  svg_to_png.py
tests/: test_smoke.py
